--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <header>Menù</header>
     <p>Questo è il p di Eli</p>
+    <footer>Messaggio di footer</footer>
 </body>
 </html>
