add footer and header 2

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <header>Menù</header>
 
     <h1>Prova git</h1>
     
+    <p>Questo è il p di Eli</p>
+    <footer>Messaggio di footer</footer>
 </body>
 </html>
